# Microcontroladores_ProjetoFinal

./: CMakeLists.txt  README.md
cmake/: avr-gcc-toolchain.cmake
fatFs/: diskio.cpp  ff.cpp  ffconf.h  mmc_avr.h  mmc_avr_spi.cpp
include/: i2c.cpp  i2c.h  mpu6050.cpp  mpu6050.h  rc522.cpp  rc522.h  spi.cpp  spi.h  st7920.cpp  st7920.h  uart.cpp  uart.h
src/: main.cpp
